--- a/css/main.css
+++ b/css/main.css
@@ -1,35 +1,43 @@
-* {
-    font-family: sans-serif;
-}
-
 body {
     margin: 0;
+    font-family: "Verdana", "Arial", "sans-serif";
 }
 
 ul {
     list-style-type: none;
+    background-color: #666666;
+    overflow: hidden;
     margin: 0px;
-    padding: 0px;
-    width: 200px;
-    height: 100%;
-    position: fixed;
-    background-color: #f1f1f1;
-    text-align: left;
+    padding: 0;
+    position: sticky;
+    width: 100%;
+    top: 0;
+}
+
+li {
+    float: left;
 }
 
 li a {
     display: block;
-    color: #000;
-    padding: 8px 16px;
+    padding: 14px 16px;
+    color: white;
     text-decoration: none;
+    text-align: center;
 }
 
-li a:hover {
-    background-color: #555;
-    color: white;
+li a.active {
+    background-color: #4caf50;
 }
 
-.active {
-    background-color: #4CAF50;
-    color: white;
+li a:hover:not(.active) {
+    background-color: #000000;
+}
+
+ul li:last-child {
+    float: right;
+}
+
+h1 {
+    
 }
